fix port and add wget